--- a/css/style.css
+++ b/css/style.css
@@ -76,13 +76,13 @@ h1 {
 	letter-spacing:0.7px;
 	margin-bottom: 20px;
 	font-weight:700;
-	font-family: 'Montserrat',sans-serif;
+	font-family: 'Georgia',serif;
 	text-shadow: 3px 3px rgba(0,0,0, .4);
 }
  
 h2 {	
     font-size: 40px;
-	font-family: 'Montserrat',sans-serif;
+	font-family: 'Georgia',serif;
     margin-bottom: 20px;
 	text-transform:uppercase;
 	color:#fff;
@@ -96,7 +96,7 @@ h2 {
 }
 
 h3 {
-	font-family: 'Montserrat',sans-serif;
+	font-family: 'Georgia',serif;
 	font-weight: 700;
 	font-size: 30px;
 	margin-top: 0px;
